# Doga

./: README.md  docker-compose.yml
backend/: Cargo.toml  README.md
backend/migrations/: 20260207164744_initial_schema.sql  20260207170310_uuid_v7_function.sql
backend/src/: lib.rs  main.rs
backend/src/core/: db.rs  error.rs
backend/src/domains/: mod.rs
backend/src/domains/journal/: models.rs
backend/src/shared/: api_doc.rs
documents/: database.md  domain.md  requirements.md
frontend/: README.md  biome.json  components.json  package.json  vite.config.ts
